2009-07-30  Miloslav Trmač  <mitr@redhat.com>

	* src/client.py (cmd_sign_rpm)
	* src/server.py (cmd_sign_rpm): Fix handling of epoch returned from
	Koji.

2009-07-23  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.96.
	* NEWS: Update.

2009-07-22  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py	(SignRpmRequestType.forward_reply_payload): Don't
	attempt to parse empty payloads as RPMs.  Handle corrupted RPMs.

	* src/bridge.py (SignRpmRequestType.forward_reply_payload): close()
	tmp_file to force it to be written to disk, flush() apparently isn't
	enough.

	* src/bridge.py (SignRpmRequestType.__koji_get_session): Authenticate
	when connecting to Koji.
	* README (server): Update.

	* src/bridge.py (main): Fix pid file removal.

	* src/bridge.py (bridge_one_request): Handle ForwardingError
	gracefully.

	* src/bridge.py (SignRpmRequestType.forward_reply_payload): Support
	RSA and v4 signatures.

	* src/double_tls.py (_CombiningBuffer.__receive_inner):
	(_CombiningBuffer.__receive_outer, _InnerBridgingBuffer._receive):
	Handle unexpected connection reset, and poll() that does not provide
	any application-level data.
	(_SplittingBuffer._receive): Don't re-raise the exception on reset
	connection.  Simplify a bit.

	* src/bridge.py (bridge_one_request, main)
	* src/server.py (request_handling_child): Log more useful information
	about NSPRError on RHEL5.

2009-07-18  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.95.
	* NEWS: Update.

	* src/client.py (ClientsConnection.send_inner)
	(ClientsConnection.read_payload)
	(ClientsConnection.write_payload_to_file)
	(ClientsConnection.__read_header)
	* src/server.py (ServersConnection.read_request)
	(ServersConnection.__send_payload)
	(ServersConnection.send_reply_header): Use M2Crypto.EVP.HMAC instead of
	Python's hmac, which uses incorrect block size in RHEL5.
	* src/utils.py (M2CryptoSHA512DigestMod): Remove.

	* src/utils.py (nss_init._password_callback): Be compatible with both